added cmake code to check meshes and texture directory is installed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,14 @@ install(TARGETS
   zero_joint_state_publisher
   DESTINATION lib/${PROJECT_NAME})
 
+if(NOT EXISTS meshes)
+  message(FATAL_ERROR, "Missing meshes directory, please follow instructions in README.md to install meshes")
+endif()
+
+if(NOT EXISTS texture)
+  message(FATAL_ERROR, "missing texture directory, please follow instructions in README.md to install texture")
+endif()
+
 foreach(dir urdf launch rviz meshes texture)
   install(DIRECTORY ${dir}/ 
      DESTINATION share/${PROJECT_NAME}/${dir}/)
